--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
-name = "zapi_mysql"
+name = "zdpapi_mysql"
 version = "0.1.0"
 description = "基于异步的快速操作MySQL的组件"
 authors = ["张大鹏 <lxgzhw@163.com>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/zhangdapeng520/zapi_mysql"
-repository = "https://github.com/zhangdapeng520/zapi_mysql"
-documentation = "https://github.com/zhangdapeng520/zapi_mysql"
+homepage = "https://github.com/zhangdapeng520/zdpapi_mysql"
+repository = "https://github.com/zhangdapeng520/zdpapi_mysql"
+documentation = "https://github.com/zhangdapeng520/zdpapi_mysql"
 keywords = ["zapi", "mysql", "async", "zhangdapeng"]
 
 [tool.poetry.dependencies]
